<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisteredFragment">

    <ImageView
        android:id="@+id/backgroundGif"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/registered_background_gif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/registeredInnerConstraintLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/congratulations"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="48sp"
            app:layout_constraintBottom_toTopOf="@+id/textView5"
            app:layout_constraintEnd_toEndOf="@id/registeredInnerConstraintLayout"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@id/registeredInnerConstraintLayout"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:text="@string/registered_message"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/registeredOkButton"
            app:layout_constraintEnd_toEndOf="@id/registeredInnerConstraintLayout"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@id/registeredInnerConstraintLayout"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <Button
            android:id="@+id/registeredOkButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/broccoli_me_ok"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/registeredInnerConstraintLayout"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@id/registeredInnerConstraintLayout"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>