<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/your_details"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/person_icon"
        app:layout_constraintBottom_toBottomOf="@+id/detailsNameText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/detailsNameText"
        app:srcCompat="@drawable/ic_baseline_person_24" />

    <EditText
        android:id="@+id/detailsNameText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="username"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/detailsEmailText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="emailAddress"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/detailsNameErrorText" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/email_icon"
        app:layout_constraintBottom_toBottomOf="@+id/detailsEmailText"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/detailsEmailText"
        app:srcCompat="@drawable/ic_baseline_email_24" />

    <EditText
        android:id="@+id/detailsConfirmEmailText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:autofillHints="emailAddress"
        android:ems="10"
        android:hint="@string/confirm_email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/detailsEmailText"
        app:layout_constraintTop_toBottomOf="@+id/detailsEmailErrorText" />

    <TextView
        android:id="@+id/detailsNameErrorText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/design_default_color_error"
        app:layout_constraintEnd_toEndOf="@+id/detailsNameText"
        app:layout_constraintStart_toStartOf="@+id/detailsNameText"
        app:layout_constraintTop_toBottomOf="@+id/detailsNameText" />

    <TextView
        android:id="@+id/detailsEmailErrorText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/design_default_color_error"
        app:layout_constraintEnd_toEndOf="@+id/detailsEmailText"
        app:layout_constraintStart_toStartOf="@+id/detailsEmailText"
        app:layout_constraintTop_toBottomOf="@+id/detailsEmailText" />

    <TextView
        android:id="@+id/detailsConfirmEmailErrorText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:textColor="@color/design_default_color_error"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/detailsConfirmEmailText"
        app:layout_constraintStart_toStartOf="@+id/detailsConfirmEmailText"
        app:layout_constraintTop_toBottomOf="@+id/detailsConfirmEmailText" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>